--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,8 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <img class="portrait" src="./images/portait.jpeg" alt="portrait image">
+            <p>This site was created by Famosa Oluwamuyiwa. It uses data from mapbox.com and weatherstack.com</p>
+            <img class="portrait" src="./images/portait.jpg" alt="portrait image">
         </div>
                 {{>footer}}
     </body>
