--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
         <div class="main-content">
             {{>header}}
             <p>This site was created by Famosa Oluwamuyiwa. It uses data from mapbox.com and weatherstack.com</p>
-            <img class="portrait" src="./images/portait.jpg" alt="portrait image">
+            <img class="portrait" src="./images/portrait.jpg" alt="portrait image">
         </div>
                 {{>footer}}
     </body>
